# Recommender

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
conf/: scrapping.yaml
config/: settings.yaml
config/books/: books.yaml
outputs/2025-03-23/15-41-03/.hydra/: config.yaml  hydra.yaml
src/: scrape.py
src/config/: app_settings.py  book_config.py
src/schemas/: __init__.py  scraper_schema.py
src/utils/: logging.py
